# fastapi-mysql-light-template

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml  settings.py
